--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   blur: ^4.0.0
-  bloc: ^8.1.4
+  http:
+  uuid: ^3.0.6
+  image_picker: ^1.1.2
   cloud_firestore: ^4.3.0
   firebase_core:
   firebase_auth:
   google_sign_in: ^6.2.1
   modal_bottom_sheet: ^3.0.0
+  cloudinary_public: ^0.23.1
+  app_settings: ^5.1.1
+  firebase_messaging:
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
