--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
         package="com.ratedsoltech.nike_app">
      <uses-permission android:name="android.permission.INTERNET"/>
      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 
      <application
@@ -38,6 +40,8 @@
          <meta-data
              android:name="com.google.firebase.messaging.default_notification_channel_id"
              android:value="high_importance_channel" />
+         <meta-data android:name="com.google.android.geo.API_KEY"
+             android:value="AIzaSyAO9cKySOlCZTf0U-WK9k_TxszGfdsSSwY"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
