--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  geolocator:
   blur: ^4.0.0
   http:
   uuid: ^3.0.6
@@ -48,6 +49,8 @@ dependencies:
   app_settings: ^5.1.1
   firebase_messaging:
   flutter_local_notifications: ^18.0.1
+  google_maps_flutter: ^2.10.0
+
 
 dev_dependencies:
   flutter_test:
